# SearchingTool

./: .gitignore  LICENSE  config.yaml  pyproject.toml  readme.md  run.py
src/science_agent/: email.py  sciagent.py  teleg.py
src/science_agent/agent/: agent.py
src/science_agent/elsevier/: elsevier.py
src/science_agent/rss/: rss.py
task/: author_list.txt  keywords.txt  publisher_whitelist.txt  rss1.yaml  rss2.yaml  rss3.yaml  rss4.yaml  task1.yaml  task1.yaml_
temp/: config.yaml
